[package]
name = "pdf_annotation_fix"
version = "0.1.0"
authors = ["Julius Hohnerlein <julihoh@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
pdf_fixing_lib = { path = "pdf_fixing_lib" }
structopt = { version = "0.3", default-features = false }

[workspace]
members = ["web-app", "pdf_fixing_lib"]

[profile.release]
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# link time optimization using using whole-program analysis
lto = true
